try fixing touch area issues on smaller screens

--- a/components/Settings/ToggleButton.module.css
+++ b/components/Settings/ToggleButton.module.css
@@ -20,6 +20,7 @@
   border: none;
   cursor: pointer;
   outline: none;
+  display: block;
 }
 
 .toggleSwitch {
